--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: CHuiL
-SEOTitle: 你的博客 | Your Blog
+SEOTitle: CHuiL
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
-description: ""
+description: "aaaa"
 keyword: ""
 #url: "http://huangxuan.me"              # your host, for absolute URL
 #baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
@@ -50,7 +50,7 @@ kramdown:
 #disqus_username: _your_disqus_short_name_
 
 # Duoshuo settings
-duoshuo_username: huxblog
+duoshuo_username: chlblog
 # Share component is depend on Comment so we can NOT use share only.
 duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
