--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ keyword: ""
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
+#weibo_username:     huxpro
+#zhihu_username:     huxpro
+#github_username:    huxpro
 #twitter_username:  huxpro
-facebook_username:  huxpro
+#facebook_username:  huxpro
 
 
 
@@ -68,7 +68,7 @@ ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+sidebar-about-description: "不是有希望才坚持，而是坚持了才有希望。"
 sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -82,19 +82,19 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 # Friends
 friends: [
     {
-        title: "Hux Blog",
-        href: "http://huangxuan.me"
-    },{
-        title: "Foo",
-        href: "#"
-    },{
-        title: "Bar",
-        href: "#"
-    },{
-        title: "Example Friends",
-        href: "#"
-    },{
-        title: "It helps SEO",
-        href: "#"
+ #       title: "Hux Blog",
+  #      href: "http://huangxuan.me"
+   # },{
+   #     title: "Foo",
+  #      href: "#"
+  #  },{
+  #      title: "Bar",
+  #      href: "#"
+  #  },{
+  #      title: "Example Friends",
+  #      href: "#"
+  # },{
+  ##     title: "It helps SEO",
+   #     href: "#"
     }
 ]
