--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in
 
 
 # Friends
-friends: [
-    {
+#friends: [
+    #{
  #       title: "Hux Blog",
   #      href: "http://huangxuan.me"
    # },{
@@ -96,5 +96,5 @@ friends: [
   # },{
   ##     title: "It helps SEO",
    #     href: "#"
-    }
-]
+ #   }
+#]
