--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: CHuiL
 SEOTitle: CHuiL
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "aaaa"
+email: ish2bchuil@gmail.com
+description: "为了寻找2B"
 keyword: ""
 #url: "http://huangxuan.me"              # your host, for absolute URL
 #baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
