--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: ish2bchuil@gmail.com
 description: "为了寻找2B"
 keyword: ""
 url: ""              # your host, for absolute URL
-baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "/chul"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
