--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/[2266]home-63835037.jpg
 email: ish2bchuil@gmail.com
 description: "为了寻找2B"
 keyword: ""
-url: ""              # your host, for absolute URL
+url: "https://for2b.github.io"              # your host, for absolute URL
 baseurl: "/chul"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
@@ -69,7 +69,7 @@ ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 #Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "不是有希望才坚持，而是坚持了才有希望。"
-sidebar-avatar: /chul/img/image-head.jpg       # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/image-head.jpg       # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
