--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: ish2bchuil@gmail.com
 description: "为了寻找2B"
 keyword: ""
 url: "https://for2b.github.io/"              # your host, for absolute URL
-baseurl: "chuil/"         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "/chuil/"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
