--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: ish2bchuil@gmail.com
 description: "为了寻找2B"
 keyword: ""
 url: "http://chuil.ish2b.cn"              # your host, for absolute URL
-baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "/chuil"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
