--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,8 @@ header-img: img/home-bg.jpg
 email: ish2bchuil@gmail.com
 description: "为了寻找2B"
 keyword: ""
-url: "http://chuil.ish2b.cn"              # your host, for absolute URL
-baseurl: "/"         # for example, '/blog' if your blog hosted on 'host/blog'
-
+url: ""              # your host, for absolute URL
+baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 # SNS settings
