--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: CHuiL
 SEOTitle: CHuiL
-header-img: /chuil/img/home-bg.jpg
+header-img: /img/home-bg.jpg
 email: ish2bchuil@gmail.com
 description: "为了寻找2B"
 keyword: ""
