--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,6 @@ RSS: false
 #facebook_username:  huxpro
 
 
-
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
@@ -74,12 +73,12 @@ sidebar-avatar: /chuil/img/image-head.jpg       # use absolute URL, seeing it's 
 
 # Featured Tags
 #featured-tags: true                     # whether or not using Feature-Tags
-#featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
+featured-condition-size: 5              # A tag will be featured if the size of it is more than this condition value
 
 
 
-# Friends
-#friends: [
+#Friends
+friends: [
     #{
  #       title: "Hux Blog",
   #      href: "http://huangxuan.me"
@@ -96,4 +95,4 @@ sidebar-avatar: /chuil/img/image-head.jpg       # use absolute URL, seeing it's 
   ##     title: "It helps SEO",
    #     href: "#"
  #   }
-#]
+]
