--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ featured-condition-size: 5              # A tag will be featured if the size of 
 
 
 #Friends
-friends: [
+#friends: [
     #{
  #       title: "Hux Blog",
   #      href: "http://huangxuan.me"
@@ -95,4 +95,4 @@ friends: [
   ##     title: "It helps SEO",
    #     href: "#"
  #   }
-]
+#]
