new post java spring

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: CHuiL
 SEOTitle: CHuiL
 header-img: img/home-bg.jpg
 email: ish2bchuil@gmail.com
-description: "为了寻找2B"
+description: "ish2b"
 keyword: ""
 url: ""              # your host, for absolute URL
 baseurl: "/chuil"         # for example, '/blog' if your blog hosted on 'host/blog'
