--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 
 #Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "只要开始了，就不算晚"
+sidebar-about-description: "just do it"
 sidebar-avatar: /chuil/img/image-head.jpg       # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
